2003-10-02  Andras Varga

	* cenvir.cc, omnetapp.h: added new method cEnvir::moduleMethodCalled(), 
	needed for animation of method calls between modules

2003-09-22  Andras Varga

	* omnetapp.cc, cenvir.cc: messageSent() signature change, see
	include/ChangeLog

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-03-15  Andras Varga

	* cinifile.cc/h: bugfix: complained about unterminated last line

2003-03-04  Andras Varga

	* cinifile.cc/h: made it faster to process large ini files (added
	haswildcard field) 

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-14  Andras Varga

	* cinifile.cc: improved handling of lines ~ 1024 chars

2003-01-07  Andras Varga

	* implemented ev.flush()

2002-10-20  Andras Varga

	* misc improvements

2002-10-07  Andras Varga

	* main.cc: added call to ExecuteOnStartup::executeAll().
	See new EXECUTE_ON_STARTUP() macro in include/ChangeLog.

2002-10-04  Andras Varga

	* error handling changed from simulation.ok() to exceptions.

2002-09-21  Andras Varga

	* filemgrs.cc, akoutvectormgr.cc: applied Steffen Sroka's patches 
	(thanks Steffen!). AKAROA_CFLAGS added to Makefile.in.

2002-07-08  Andras Varga

	* filemgrs.cc: added fname-append-host=true/false ini file setting.
	When turned on, appends the host name to the names of the output
	files (output vector, output scalar, snapshot files). This is 
	useful when the simulation is run on multiple machines concurrently
	(parallel independent runs (Akaroa) or parallel/distributed simulation),
	and all running instances write to the same directory (e.g. shared
	via NFS mount). [Idea from Steffen Sroka's Akaroa extension]

	* added akoutvectormgr.h/cc: integrated Steffen Sroka's Akaroa 
	extension that supports multiple independent replicated simulation runs.
	Akaroa can be activated by specifying
	  [General]
	  outputvectormanager-class=cAkOutputVectorManager
	in the ini file. By default, all output vectors are under Akaroa 