@@ -144,6 +144,23 @@ void TOmnetApp::setup()
              }
              simulation.setNetInterface( netmod );
          }
+
+         // preload NED files
+         const char *nedfiles = ini_file->getAsString("General", "preload-nedfiles", NULL);
+         if (nedfiles)
+         {
+             // iterate through file names
+             ev.printf("\n");
+             char *buf = opp_strdup(nedfiles);
+             char *fname = strtok(buf, " ");
+             while (fname!=NULL)
+             {
+                 ev.printf("Loading NED file: %s\n", fname);
+                 simulation.loadNedFile(fname);
+                 fname = strtok(NULL, " ");
+             }
+             delete [] buf;
+         }
      }
      catch (cException *e)
      {
